[metadata]
name = sandsea
version = 0.0.1
author = Lux Bodell
author_email = luxbodell@gmail.com
description = Three-dimensional physics simulation engine
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cs-AI-dev/Sandsea
project_urls =
    Bug Tracker = https://github.com/cs-AI-dev/Sandsea/issues
    Wiki = https://github.com/cs-AI-dev/Sandsea/wiki
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
